# gnome-shell-extension-ddterm

./: .bumpversion.toml  .editorconfig  .eslintignore  .eslintrc.yml  .flake8  .gitattributes  .gitignore  .markdownlint-cli2.mjs  .markdownlint-cli2.yaml  .markdownlint.yml  .npmrc  .weblate.ini  AUTHORS  CHANGELOG.md  Dockerfile  Makefile  PKGBUILD  README.ko_KR.md  README.md  REUSE.toml  Vagrantfile  application.js  appwindow.js  appwindow.ui  bump-version.sh  com.github.amezin.ddterm  com.github.amezin.ddterm.Extension.xml  com.github.amezin.ddterm.ExtensionTest.xml  connectionset.js  dependencies-notification.js  dependencies-update.js  dependencies.js  dependencies.json  do-in-docker.sh  do-in-podman.sh  eslint.config.mjs  extension.js  extension.legacy.js  extension_tests.js  importcheck.js  (+57 more)
data/: com.github.amezin.ddterm.Extension.xml  com.github.amezin.ddterm.desktop.in.in  com.github.amezin.ddterm.svg.license  ddterm-resources.gresource.xml  meson.build
data/ui/: notebook.ui
ddterm/: README.md  com.github.amezin.ddterm.Debug.xml  com.github.amezin.ddterm.Extension.xml  com.github.amezin.ddterm.HeapDump.xml  com.github.amezin.ddterm.Launcher.xml  com.github.amezin.ddterm.Notebook.xml  com.github.amezin.ddterm.Terminal.xml  com.github.amezin.ddterm.desktop  com.github.amezin.ddterm.desktop.in  com.github.amezin.ddterm.desktop.in.in  com.github.amezin.ddterm.service  com.github.amezin.ddterm.service.in  dbus-com.github.amezin.ddterm.service.in  meson.build  org.gnome.Shell.Extensions.ddterm.service
ddterm/app/: README.md  about.js  accellabel.js  actions.js  application.js  appwindow.js  debug.js  dependencies-notification.js  dependencies.js  dependencies.json  dev-application.js  dev-appwindow.js  displayconfig.js  encoding.js  extensiondbus.js  gtktheme.js  gtktheme.legacy.js  heapdump.js  init.js  init.legacy.js  main.js  menus.ui  meson.build  meta.js  metadata.js  notebook.js  pcre2.js  prefsdialog.js  prefsdialog.legacy.js  regex.js  resources.js  search.js  settings.js  style.css  tablabel.js  tcgetpgrp.js  terminal.js  terminalpage.js  terminalsettings.js  urldetect.js  (+2 more)
ddterm/backport/: GObject.js  _common.js
ddterm/common/: README.md  rxutil.js  settings.js  timers.js
ddterm/pref/: README.md  adw.js  animation.js  appearance.js  behavior.js  colors.js  command.js  compatibility.js  dialog.js  meson.build  panelicon.js  positionsize.js  prefsanimation.js  prefsbehavior.js  prefscolors.js  prefscommand.js  prefscompatibility.js  prefsdialog.js  prefspanelicon.js  prefspositionsize.js  prefsscrolling.js  prefsshortcuts.js  prefstabs.js  prefstext.js  prefswidget.js  resources.js  resources.legacy.js  scrolling.js  shortcuts.js  tabs.js  text.js  util.js  widget.js
ddterm/rx/: rxutil.js  settings.js
ddterm/shell/: README.md  animation.js  appcontrol.js  application.js  buswatch.js  compat.js  compat.legacy.js  connectionset.js  dbusapi.js  extension.js  geometry.js  install.js  meson.build  notifications.js  packagekit.js  packagemanager.js  panelicon.js  sd_journal.js  service.js  subprocess.js  windowmatch.js  wlclipboard.js  wm.js
ddterm/util/: dbus.js  displayconfig.js  gjs-typelib-installer.js  logger.js  meson.build  promise.js  reexport.js.in  settings.js  simpleaction.js  translations.js
lint/: ddterm-common.mjs  eslint.config.esm.mjs.in  eslint.config.legacy.mjs.in  eslintrc-ddterm-build-esm.yml.in  eslintrc-ddterm-build-legacy.yml.in  eslintrc-ddterm-common.yml  eslintrc-gjs.mjs  eslintrc-gjs.yml  eslintrc.build.yml.in  gitignore.mjs  import-resolver.cjs  meson.build  pretty.markdownlint-cli2.yaml
po/: LINGUAS  POTFILES.in  README.md  REUSE.toml  cs.po  ddterm@amezin.github.com.pot  ddterm@amezin.github.com.pot.license  de.po  el.po  eo.po  es.po  fr.po  gen-potfiles.py  gen-reuse.py  hu.po  id.po  it.po  ko.po  meson.build  nb_NO.po  pl.po  pt.po  pt_BR.po  ru.po  ta.po  tr.po  update-pot.sh  zh_CN.po  zh_Hans.po
schemas/: com.github.amezin.ddterm.gschema.xml  extract-license.xsl  gschemas.compiled  meson.build  org.gnome.shell.extensions.ddterm.gschema.xml
test/: .flake8  .gitignore  README.md  appdebug.py  apphook.js  apphook.py  com.github.amezin.ddterm.ExtensionTest.xml  compose.yaml  conftest.py  container_fixtures.py  container_util.py  coreutils_container.py  dbus_util.py  dbusproxy.py  dbustrace.py  dbusutil.py  ddterm_fixtures.py  displayconfig.py  extension_tests.js  extensiondbus.py  extensionhook.js  extensionhook.py  fbdir.conf  fixtures.py  geometry.py  github_annotations.py  glib_util.py  glibutil.py  gnome_container.py  gtest_output_compat.py  image_util.py  images.py  log_filter.py  log_sync.py  logparser.py  logsync.py  markdown_report.py  meson.build  metadata.json  mutter-dual-monitor.conf  (+33 more)
test/dbus-interfaces/: com.github.amezin.ddterm.Debug.xml  com.github.amezin.ddterm.Extension.xml  com.github.amezin.ddterm.Settings.xml  com.github.amezin.ddterm.TestHook.xml  org.gnome.Mutter.DisplayConfig.xml  org.gnome.Shell.Extensions.xml  org.gnome.Shell.TestHook.xml  org.gnome.Shell.xml
test/dummyapp/: com.github.ddterm.testapp.service  dummyapp.js
test/extension/: extension.js  metadata.json  (+1 more)
test/extension-legacy/: extension.js  metadata.json
tests/: README.md  apphook.js  apphook.py  compose.yaml  conftest.py  dbusproxy.py  dbustrace.py  dbusutil.py  displayconfig.py  dummy-app.js  extensionhook.js  fixtures.py  glibutil.py  images.py  logger.js  meson.build  pictparam.py  procutil.py  requirements.txt  screenshot.py  settingshook.js  shelldbus.py  shellhook.js  shellhook.py  test_app.py  test_logparser.py  test_wm.py  util.js
tools/: .gitignore  capture-stdout.py  changelog.mjs  check_pack.py  eslint-gitignore.mjs  fixmetadata.py  format-version.mjs  gdk-monitors.js  heapdot.py  heapgraph.js  heapgraph.md  heapgraph.md.license  heapgraph.py  import-resolver.js  makemetadata.py  makezip.py  markdownlint-cli2-release-notes.yml  meson.build  preproc_esm.sin  preproc_legacy.sin  reuse-annotate-auto.sh  run_nested_shell.py  store-revision.sh.in  toggle-benchmark.py  translate-esm.js  xml_license.py  xvfb-run.py
(+285 files in other folders)
