# SPDX-FileCopyrightText: 2024 Aleksandr Mezin <mezin.alexander@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

option(
  'shebang_override',
  type : 'string',
  value : '',
  description : 'If not empty, use the specified command instead of GJS executable'
)

option(
  'tests',
  type : 'feature',
  value: 'auto',
  description : 'Run pytest during "meson test"/"ninja test"'
)
