# SPDX-FileCopyrightText: 2024 Aleksandr Mezin <mezin.alexander@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

option(
  'shebang_override',
  type : 'string',
  value : '',
  description : 'If not empty, use the specified command instead of GJS executable'
)

option(
  'tests',
  type : 'feature',
  value: 'auto',
  description : 'Run pytest during "meson test"/"ninja test"'
)

option(
  'tests_x11',
  type : 'feature',
  value: 'auto',
  description : 'Run X11 tests during "meson test"/"ninja test"'
)

option(
  'tests_wl_clipboard',
  type : 'feature',
  value: 'auto',
  description : 'Run wl-clipboard tests during "meson test"/"ninja test"'
)

option(
  'typelib_installer',
  type : 'boolean',
  value : false,
  description : 'Use gjs-typelib-installer to install missing GObject libraries. ' +
    'Makes sense only for extension bundles that are going to be distributed ' +
    'through extensions.gnome.org. Useless for deb/rpm packages, as they have ' +
    'their own dependency system.'
)
