# SPDX-FileCopyrightText: 2024 Aleksandr Mezin <mezin.alexander@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

option(
  'esm',
  type : 'boolean',
  value : true,
  description : 'Target GNOME >= 45'
)

option(
  'shebang_override',
  type : 'string',
  value : '',
  description : 'If not empty, use the specified command instead of GJS executable'
)

option(
  'linters',
  type : 'feature',
  value: 'auto',
  description : 'Run linters during "meson test"/"ninja test"'
)

option(
  'tests',
  type : 'feature',
  value: 'auto',
  description : 'Run tests during "meson test"/"ninja test"'
)
